[gd_scene load_steps=5 format=2]

[ext_resource path="res://Map Resources/CameraMap.gd" type="Script" id=1]
[ext_resource path="res://Map Resources/Map.gd" type="Script" id=2]
[ext_resource path="res://Map Resources/GridOverlay.png" type="Texture" id=3]
[ext_resource path="res://Map Resources/Nation Label Resources/NationLabelManager.tscn" type="PackedScene" id=4]

[node name="Map" type="Node2D"]
script = ExtResource( 2 )

[node name="CameraMap" type="Camera2D" parent="."]
current = true
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="LFPS" type="Label" parent="CanvasLayer"]
margin_right = 40.0
margin_bottom = 14.0

[node name="GridOverlay" type="TextureRect" parent="."]
margin_right = 150.0
margin_bottom = 150.0
texture = ExtResource( 3 )
stretch_mode = 2

[node name="ClCityLabels" type="CanvasLayer" parent="."]
layer = 128

[node name="NationLabelManager" parent="." instance=ExtResource( 4 )]
